--- a/src/examen1/Preguntas del examen.html
+++ b/src/examen1/Preguntas del examen.html
@@ -114,7 +114,7 @@ from Examen_Mario_Login
 inner join ChatBox on Examen_Mario_Login.DisplayName
 = ChatBox.DisplayName
 
-5.	Con base al conocimiento adquirido en estas semanas de Programación III, 
+5.	Con base al conocimiento adquirido en estas semanas de Programación , 
 elabore un pequeño análisis de buenas prácticas en materia de SQL (Al menos 10 puntos)
 y su relación a Java. (8 pts.).
 
